--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/Yeami/web-programming#readme",
   "devDependencies": {
     "css-loader": "^5.0.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
