--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.0.1",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0"
   },
