--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "homepage": "https://github.com/Yeami/web-programming#readme",
   "devDependencies": {
     "css-loader": "^5.0.0",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
+    "mini-css-extract-plugin": "^1.2.1",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
