--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "css-loader": "^5.0.0",
     "css-minimizer-webpack-plugin": "^1.1.5",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
@@ -34,6 +35,7 @@
     "webpack-cli": "^4.1.0"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "lodash": "^4.17.20"
   }
 }
